create menu and menu-item. Add inMemoryDB

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<app-toolbar></app-toolbar>
-<div class="main">
-  <app-menu></app-menu>
-  <app-home></app-home>
+
+<div class="wrapper">
+  <app-toolbar></app-toolbar>
+  <div class="main">
+    <app-menu></app-menu>
+    <app-home></app-home>
+    <app-daelrspage></app-daelrspage> 
+     <app-cars></app-cars>
+  </div>
 </div>
+
 
   
   
