--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,6 +1,6 @@
 .container__menu{
-  width: 70px;
-  height: 100%;
+  width: 5vw;
+  height: 100vh;
   background-color: red;
   display: flex;
   flex-direction: column;
