--- a/src/app/menu-item/menu-item.component.scss
+++ b/src/app/menu-item/menu-item.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .menu__link{
@@ -11,15 +12,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 63px;
+  width: 4.7vw;
   margin: 0 auto;
 }
-// .menu__link:hover{
-//  border-right: 3px solid #fff ;
- 
-// }
-.line{
-  width: 2px;
+
+.line-visible{
+  width: 3px;
   height: 40px;
   background-color: #fff;
+}
+
+.line-unvisible{
+  width: 3px;
+  visibility: hidden;
 }
