WIP: add routs home cars dealers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,10 @@
   <app-toolbar></app-toolbar>
   <div class="main">
     <app-menu></app-menu>
-    <app-home></app-home>
-    <app-daelrspage></app-daelrspage> 
-     <app-cars></app-cars>
+    <router-outlet></router-outlet>
+    <!-- <app-home></app-home> -->
+    <!-- <app-daelrspage></app-daelrspage>  -->
+     <!-- <app-cars></app-cars> -->
   </div>
 </div>
 
