--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,4 +1,10 @@
 <div class="cars__conatainer">
-  
+  <div class="cars__item">
+    <div class="cars__item-left"><app-tabs></app-tabs>
+    </div>
+    
+    <div class="cars__item-rigth"><app-slide-toggle></app-slide-toggle></div>
+    
+  </div>
 
  </div>
