--- a/src/app/cars/cars.component.scss
+++ b/src/app/cars/cars.component.scss
@@ -4,3 +4,18 @@
   height: 100vh;
  
 }
+.cars__item{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 10px 0px 40px;
+  align-items: center;
+  
+}
+.cars__item-rigth{
+  width: 20vw;
+  
+}
+.cars__item-rigth{
+
+}
