--- a/src/app/daelrspage/daelrspage.component.html
+++ b/src/app/daelrspage/daelrspage.component.html
@@ -1,11 +1,5 @@
 <div class="dealrspage__conatainer">
-  <div class="dealrspage__item">
-    <div class="left"><app-tabs></app-tabs>
-    </div>
-    
-    <div class="rigth"><app-slide-toggle></app-slide-toggle></div>
-    
-  </div>
+ 
   
-
+  <h2>Dealers</h2>
  </div>
