--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -1,6 +1,6 @@
 <div class="menu__item">
   <div class="menu__item-icon">
-    <a class="menu__link" (click)="onClick()">
+    <a class="menu__link" (click)="onNavigate()">
       <mat-icon aria-hidden="false">{{icon}}</mat-icon>
       <p>{{title}}</p>
     </a>
