--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,9 @@
 <div class="container__menu">
   <div *ngFor="let menuIten of menuItems">
-    <app-menu-item icon="{{menuIten.icon}}" title="{{menuIten.title}}" [is-selected]="menuIten.isSelected" (selected)="onSelected($event)"></app-menu-item>
+    <app-menu-item icon="{{menuIten.icon}}" 
+                   title="{{menuIten.title}}" 
+                   [is-selected]="menuIten.isSelected" 
+                   path="{{menuIten.path}}"
+                   (selected)="onSelected($event)"></app-menu-item>
   </div>
 </div>
