--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="wrapper">
-  <app-toolbar></app-toolbar>
+  <app-header></app-header>
   <div class="main">
     <app-menu></app-menu>
     <router-outlet></router-outlet>
