--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,15 @@
 <div class="home__conatainer">
- <app-likecar></app-likecar>
- 
+ <app-car-i-like></app-car-i-like>
  <app-mycars></app-mycars>
- <app-dealers></app-dealers>
- <app-button></app-button>
-
+ <app-my-dealers></app-my-dealers>
+ <div class="button">
+  <section>
+    <div class="example-button-row">
+      <button mat-raised-button color="accent">Add car</button>
+      <button mat-raised-button color="primary">Add dealers</button>
+    </div>
+  </section>
+</div>
 </div>
 
   
