--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -1,8 +1,9 @@
 <div class="menu__item">
   <div class="menu__item-icon">
     <a class="menu__link" (click)="onNavigate()">
-      <mat-icon aria-hidden="false">{{icon}}</mat-icon>
-      <p>{{title}}</p>
+      <mat-icon aria-label="Trololo" aria-hidden="false">{{menuItem.icon}}</mat-icon>
+      <!-- <mat-icon aria-label="{{menuItem.ariaLabel}}" aria-hidden="false">{{menuItem.icon}}</mat-icon> -->
+      <p>{{menuItem.title}}</p>
     </a>
   </div>
 
