--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,7 @@
 <div class="container__menu">
   <div *ngFor="let menuIten of menuItems">
-    <app-menu-item icon="{{menuIten.icon}}" 
-                   title="{{menuIten.title}}" 
-                   [is-selected]="menuIten.isSelected" 
-                   path="{{menuIten.path}}"
+    <app-menu-item [menu-item]="menuIten"
+                   [is-selected]="menuIten.isSelected"
                    (selected)="onSelected($event)"></app-menu-item>
   </div>
 </div>
