--- a/src/app/my-cars/mycars.component.html
+++ b/src/app/my-cars/mycars.component.html
@@ -1,6 +1,6 @@
 <div class="mycar__conatiner-column">
   <div class="mycar__item">
-    <h4>Car I Like</h4>
+    <h4>My cars</h4>
   </div>
   <div class="mycar__text"><p>You havent added any cars yet</p></div>
 </div>
