WIP: create service and add mat-tab-link

--- a/src/app/by-category-cars/by-category-cars.component.html
+++ b/src/app/by-category-cars/by-category-cars.component.html
@@ -1,11 +1,8 @@
-<div class="cars__conatainer">
-  <div class="cars__item">
-    <div class="cars__item-left">
-      <app-cars-tabs></app-cars-tabs>
-    </div>
-    <div class="cars__item-rigth">
-      <app-slide-toggle></app-slide-toggle>
-    </div>
-  </div>
- </div>
+<div class="car-cotainer">
+  <div class="category__conatainer">
+    <app-cars-tabs [categories]="categories"></app-cars-tabs>
+    <app-slide-toggle></app-slide-toggle>
+   </div>
+</div>
+
 
