--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,10 +1,2 @@
-<div class="cars__conatainer">
-  <div class="cars__item">
-    <div class="cars__item-left">
-      <app-cars-tabs></app-cars-tabs>
-    </div>
-    <div class="cars__item-rigth">
-      <app-slide-toggle></app-slide-toggle>
-    </div>
-  </div>
- </div>
+<app-by-category-cars></app-by-category-cars>
+<!-- <app-all-cars></app-all-cars> -->
