--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 @font-face {
   font-family: "PlayballRegular";
-  src: url(../src/assets/fonts/Playball-Regular.ttf) format("truetype");
+  src: url("../src/assets/fonts/Playball-Regular.ttf") format("truetype");
 }
