--- a/src/app/cars-tabs/cars-tabs.component.html
+++ b/src/app/cars-tabs/cars-tabs.component.html
@@ -1,9 +1,7 @@
-<mat-tab-group>
-  <mat-tab label="Coup"> </mat-tab>
-  <mat-tab label="Roadster"> </mat-tab>
-  <mat-tab label="Sedan"> </mat-tab>
-  <mat-tab label="Offroader"> </mat-tab>
-  <mat-tab label="Pickup Truck"> </mat-tab>
-  <mat-tab label="Other"> </mat-tab>
-</mat-tab-group>
+<nav mat-tab-nav-bar [backgroundColor]="background">
+  <a mat-tab-link *ngFor="let category of categories"
+     (click)="activeLink = category"
+     [active]="activeLink == category"> {{category}}
+  </a>
+</nav>
 
