--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,7 +1,7 @@
 .container__menu{
   width: 5vw;
   height: 100vh;
-  background-color: #512da7;
+  background-color: #673ab7;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
