--- a/src/app/sm-card-car/sm-card-car.component.html
+++ b/src/app/sm-card-car/sm-card-car.component.html
@@ -1,9 +1,9 @@
 <mat-card class="example-card">
   
   <mat-card-header>
-    <mat-card-title>{{carItem.title}}</mat-card-title>
-    <mat-card-subtitle>{{carItem.subtitle}}</mat-card-subtitle>
+    <mat-card-title class="sm-card-title">{{carItem.title}}</mat-card-title>
+    <mat-card-subtitle class="sm-card-subtitle">{{carItem.subtitle}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="{{carItem.src}}" alt="{{carItem.alt}}">
+  <img class="sm-card-img" mat-card-image src="{{carItem.src}}" alt="{{carItem.alt}}">
 </mat-card>
 
