--- a/src/app/sm-card-car/sm-card-car.component.scss
+++ b/src/app/sm-card-car/sm-card-car.component.scss
@@ -3,7 +3,29 @@
   margin-top: 10px;
 }
 
+
 .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
+}
+.mat-card-header{
+  margin: 0;
+  width: 100%;
+}
+.sm-card-title{
+  font-size: 14px;
+
+}
+.sm-card-subtitle{
+  font-size: 12px;
+  
+}
+.sm-card-img{
+  height: 80px;
+}
+.mat-card-header-text {
+  margin: 0px !important;
+}
+.mat-card-header {
+  padding: 0px;
 }
