--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,1 @@
-
-<div class="wrapper">
-  <app-header></app-header>
-  <div class="main">
-    <app-menu></app-menu>
-    <router-outlet></router-outlet>
-    <!-- <app-home></app-home> -->
-    <!-- <app-daelrspage></app-daelrspage>  -->
-     <!-- <app-cars></app-cars> -->
-  </div>
-</div>
-
-
-  
-  
-
-  
+<app-main></app-main>
