--- a/src/app/cars/by-category-cars/by-category-cars.component.scss
+++ b/src/app/cars/by-category-cars/by-category-cars.component.scss
@@ -11,3 +11,62 @@
   height: 80px;
   align-items: center;
 }
+.container__info{
+  display: flex;
+  width: 100vw;
+  flex-direction: row;
+  
+}
+li{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: gray;
+  padding: 10px;
+  margin: 10px;
+  width: 250px;
+  height: 50px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px 1px #000;
+}
+.brand{
+  font-weight: bold;
+}
+.car__info{
+  display: flex;
+  flex-direction: column;
+}
+.car__button{
+  border-radius: 50%;
+  width: 55px;
+  height: 55px;
+  border: 1px solid #000;
+  font-weight: 600;
+  cursor: pointer;
+}
+.car__img{
+  width: 500px;
+  height: 250px;
+  margin-top: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+img{
+  border-radius: 5px;
+  width: 500px;
+  height: 250px;
+}
+.detail__info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
+  padding: 10px;
+  width: 150px;
+  background-color: gainsboro;
+  height: 120px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
