--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,6 +1,7 @@
 .container__menu{
   width: 5vw;
-  height: 120vh;
+  height: 100%;
+  min-height: 100vh;
   background-color: #673ab7;
   display: flex;
   flex-direction: column;
