WIP: make dealers button

--- a/src/app/dealers/dealers/dealers.component.scss
+++ b/src/app/dealers/dealers/dealers.component.scss
@@ -1,4 +1,22 @@
 .dealers__conatainer{
   width: 100vw;
   height: 100vh;
+  background-color: turquoise;
+  display: flex;
+  flex-direction: row;
 }
+section {
+  display: table;
+}
+
+
+.example-button-row {
+  display: table-cell;
+  width: 490px;
+}
+
+.example-button-row .mat-button-base {
+  margin: 8px 8px 8px 0;
+}
+
+
