--- a/src/app/home/car-i-like/car-i-like.component.html
+++ b/src/app/home/car-i-like/car-i-like.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="card__container">
-    <div *ngFor="let carItem of carItems" class="card-item__container">
+    <div *ngFor="let carItem of carItems">
       <app-sm-card-car [car-item]="carItem"></app-sm-card-car>
     </div>
 </div>
