--- a/src/app/cars/all-cars/all-cars.component.html
+++ b/src/app/cars/all-cars/all-cars.component.html
@@ -1,19 +1,26 @@
 <div class="all-car-container">
   <div class="all-car__items">
-    <input type="text" placeholder="Filter">
+    <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Filter" value="">
+      </mat-form-field>
+    </form>
+
   </div>
-  
+
+
+
+  <div class="all-car-list__container">
+    <div *ngFor="let carListItem of carListItems | slice:0:8">
+      <!-- <app-md-car-card [md-car-item]="carListItem"></app-md-car-card> -->
+      <app-sm-card-car [car-item]="carListItem"></app-sm-card-car>
+    </div>
+  </div> 
+
+
+  <section>
+    <div class="example-button-row">
+      <button mat-raised-button color="accent">Load More</button>
+    </div>
+  </section>
 </div>
-
-<div class="all-car-list__container">
-  <div *ngFor="let carListItem of carListItems | slice:0:8">
-    <app-md-car-card [md-car-item]="carListItem"></app-md-car-card>
-  </div>
-</div>
-
-
-<section class="button-container">
-  <div class="example-button-row">
-    <button mat-raised-button color="accent" >Load More</button>
-  </div>
-</section>
