--- a/src/app/cars/all-cars/all-cars.component.scss
+++ b/src/app/cars/all-cars/all-cars.component.scss
@@ -1,85 +1,56 @@
-// .all-car-cotainer{
-//   width: 100vw;
-//   height: 200vh;
-// }
-// .all-car-list__container{
-//   max-width: 900px;
-//   background-color: green;
-// }
-// .all-car__items{
-//   max-width: 1050px;
-//   overflow: hidden;
-//   display: flex;
-//   flex-direction: row;
-//   height: 80px;
-//   align-items: center;
-//   justify-content: space-between;
-//   margin-left: 40px;
-// }
-// .all-car-list{
-//   max-width: 1100px;
-//   display: flex;
-//  justify-content: center;
-//   flex-direction: row;
-//   flex-grow: 1 1 1 1;
-
-// }
-
-// .button-load{
-//  cursor: pointer;
-//  margin-top: 20px;
-//  background-color: gold;
-//  display: flex;
-//  justify-content: center;
-//  max-width: 1100px;
- 
-// }
 
 .all-car-container{
-  width: 100vw;
-  background-color: gray;
-  // height: 40px;
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  padding-left: 40px;
-  padding-right:40px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  // padding-left: 40px;
+  // padding-right:40px;
+  background-color: gold;
+  
 }
 .all-car__items{
-  width: 87vw;
+  width: 88vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 30px;
-}
-input{
-  border: none;
-  border-bottom: 1px solid #000;
-  font-size: 18px;
-}
-.all-car-list__container{
-  width: 70vw;
-  margin: 0 auto;
+  margin-top: 18px;
+  background-color: palevioletred;
+  padding-left: 40px;
+  padding-right:40px;
   
 }
+
 .all-car-list__container{
+  width: 67vw;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  flex-wrap: 60px;
+  justify-content: space-between;
+  margin-top: 30px;
   flex-grow: 1 1 1 1;
-  justify-content: center;
+  background-color: aqua;
 }
-.button-container{
-  width: 70vw;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  background-color: green;
-}
+
 .example-button-row{
-  width: 70vw;
+  width: 67vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-color: peru;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
+.example-form {
+  width: 12vw;
+  
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+
+
