--- a/src/app/dealers/dealers/dealers.component.html
+++ b/src/app/dealers/dealers/dealers.component.html
@@ -1,5 +1,9 @@
 <div class="dealers__conatainer">
- 
-  
-  <h2>Dealers</h2>
- </div>
+
+
+  <section>
+    <div class="example-button-row">
+      <button mat-raised-button color="primary">Add dealers</button>
+    </div>
+  </section>
+</div>
