--- a/src/app/home/car-i-like/car-i-like.component.scss
+++ b/src/app/home/car-i-like/car-i-like.component.scss
@@ -1,5 +1,6 @@
 .like__conatiner-column{
   width: 20vw;
+  background-color: pink;
 
 }
 .like__item{
@@ -7,17 +8,15 @@
   border-bottom: 3px solid gray;
   padding-bottom: 10px;
 }
-.card-item__container{
-  margin: 0;
-  padding: 0;
-}
+
 .card__container{
-  max-width: 22vw;
+  max-width: 20vw;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   margin-top: 8px;
   justify-content: space-between;
+  background-color: blue;
 
 }
 
