--- a/src/app/shared-components/sm-card-car/sm-card-car.component.html
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.html
@@ -1,9 +1,11 @@
-<mat-card class="example-card">
-  
+<mat-card >
   <mat-card-header>
-    <mat-card-title class="sm-card-title">{{carItem.title}}</mat-card-title>
-    <mat-card-subtitle class="sm-card-subtitle">{{carItem.subtitle}}</mat-card-subtitle>
+    <mat-card-title >{{carListItem .title}}</mat-card-title>
+    <mat-card-subtitle >{{carListItem .subtitle}}</mat-card-subtitle>
+    <mat-icon aria-label="Liked icon">favorite</mat-icon>
   </mat-card-header>
-  <img class="sm-card-img" mat-card-image src="{{carItem.src}}" alt="{{carItem.alt}}">
+  <img mat-card-image src="{{carListItem .src}}" alt="{{carListItem .alt}}">
+  <button class="btn-like" mat-button >Like</button>
+  <button class="btn-details" mat-button>Details</button> 
 </mat-card>
 
