--- a/src/app/dealers/dealers/dealers.component.html
+++ b/src/app/dealers/dealers/dealers.component.html
@@ -1,6 +1,6 @@
 <div class="dealers__conatainer">
 
-
+<app-table></app-table>
   <section>
     <div class="example-button-row">
       <button mat-raised-button color="primary">Add dealers</button>
