--- a/src/app/cars/by-category-cars/by-category-cars.component.html
+++ b/src/app/cars/by-category-cars/by-category-cars.component.html
@@ -1,6 +1,6 @@
 <div class="car-cotainer">
   <div class="category__conatainer">
-    <mat-tab-group>
+    <mat-tab-group (selectedTabChange)="tabChange($event)">
       <mat-tab [label]="category | titlecase" *ngFor="let category of carsCategories">
         <mat-selection-list #cars [multiple]="false">
           <mat-list-option *ngFor="let car of takeCarsByCategory(category)" (click)="selectCar(car)">
@@ -14,11 +14,12 @@
 </div>
 <div class="container__info">
   <div class="car__img" *ngIf="selectedCar">
-    <img [src]="selectedCar.image" [alt]="selectedCar.model">
+    <img *ngIf="selectedCar.image" [src]="selectedCar.image" [alt]="selectedCar.model">
+    <img *ngIf="!selectedCar.image" src="./assets/images/porsche-boxter.jpg" [alt]="selectedCar.model">
   </div>
 
 
-  <div class="detail__info" *ngIf="selectedCar != null">
+  <div class="detail__info" *ngIf="selectedCar">
     <span><h3>{{selectedCar.model}}</h3></span>
     <span><h4>Dealers: <b>{{selectedCar.brand}}</b></h4></span>
     <span><h4>Class: <b>{{selectedCar.class |titlecase}}</b></h4></span>
