--- a/src/app/shared-components/sm-card-car/sm-card-car.component.html
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.html
@@ -1,11 +1,13 @@
-<mat-card >
+<mat-card [ngClass]="cardStyleSize" >
   <mat-card-header>
-    <mat-card-title >{{carListItem .title}}</mat-card-title>
-    <mat-card-subtitle >{{carListItem .subtitle}}</mat-card-subtitle>
-    <mat-icon aria-label="Liked icon">favorite</mat-icon>
+    <mat-card-title [ngClass]="cardStyleTitle">{{carItem .model}}</mat-card-title>
+    <mat-card-subtitle [ngClass]="cardStyleSubtitle">{{carItem .brand}}</mat-card-subtitle>
+    <mat-icon *ngIf="isCardLg" aria-label="Liked icon">favorite</mat-icon>
   </mat-card-header>
-  <img mat-card-image src="{{carListItem .src}}" alt="{{carListItem .alt}}">
-  <button class="btn-like" mat-button >Like</button>
-  <button class="btn-details" mat-button>Details</button> 
+  <img mat-card-image src="{{carItem .image}}" alt="{{carItem.brand}}">
+  <div *ngIf="isCardLg">
+    <button class="btn-like" mat-button >Like</button>
+    <button class="btn-details" mat-button>Details</button> 
+  </div>
 </mat-card>
 
