--- a/src/app/shared-components/sm-card-car/sm-card-car.component.scss
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.scss
@@ -1,32 +1,22 @@
 .mat-card  {
-  width: 170px;
-  margin-top: 10px;
+  // width: 100vw;
+  margin-top: 20px;
 }
 
 
 .example-header-image {
   background-size: cover;
 }
-// // .mat-card-header{
-// //   margin: 0;
-// //   width: 100%;
-// // }
-// .mat-card-title {
-//   font-size: 12px;
-// }
-// .mat-card-subtitl{
-//   font-size: 10px;
-// }
-.mat-icon{
-// display: none;
-}
-// .mat-card-image{
-// width: 100%;
-// }
+
 
 .mat-card-header {
   justify-content: space-between;
   margin-left: -16px;
+}
+.mat-card-image {
+	width: calc(100% + 32px);
+	margin: 0 -16px 16px -16px;
+	max-height: 100px;
 }
 button{
   padding: 0;
@@ -42,4 +32,22 @@ button{
 }
 .btn-details{
   color: purple;
+}
+.size-sm{
+  // width: 80px;
+}
+.size-lg{
+  width: 170px;
+}
+.title-sm{
+  font-size: 12px;
+}
+.subtitle-sm{
+  font-size: 12px;
+}
+.title-lg{
+  font-size: 16px;
+}
+.subtitle-lg{
+  font-size: 14px;
 }
