WIP: style smcard

--- a/src/app/cars/by-category-cars/by-category-cars.component.html
+++ b/src/app/cars/by-category-cars/by-category-cars.component.html
@@ -15,7 +15,7 @@
 <div class="container__info">
   <div class="car__img" *ngIf="selectedCar">
     <img *ngIf="selectedCar.image" [src]="selectedCar.image" [alt]="selectedCar.model">
-    <img *ngIf="!selectedCar.image" src="./assets/images/porsche-boxter.jpg" [alt]="selectedCar.model">
+    <img *ngIf="!selectedCar.image" src="../../../assets/images/defoult.jpg" [alt]="selectedCar.model">
   </div>
 
 
