--- a/src/app/shared-components/sm-card-car/sm-card-car.component.html
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.html
@@ -2,14 +2,16 @@
   <mat-card-header>
     <mat-card-title [ngClass]="cardStyleTitle">{{carItem .model}}</mat-card-title>
     <mat-card-subtitle [ngClass]="cardStyleSubtitle">{{carItem .brand}}</mat-card-subtitle>
-    <mat-icon *ngIf="isCardLg" aria-label="Liked icon">favorite</mat-icon>
+    <mat-icon  [ngClass]="cardStyleIcon" *ngIf="this.carItem.liked"  aria-label="Liked icon">favorite</mat-icon>
   </mat-card-header>
-  <img *ngIf="carItem.image" mat-card-image src="{{carItem .image}}" alt="{{carItem.brand}}">
-  <img  *ngIf="!carItem.image"mat-card-image src="../../../assets/images/defoult.jpg" alt="{{carItem.brand}}">
+  <img [ngClass]="cardStyleImg" *ngIf="carItem.image" mat-card-image src="{{carItem .image}}" alt="{{carItem.brand}}">
+  <img [ngClass]="cardStyleImg"  *ngIf="!carItem.image"mat-card-image src="../../../assets/images/defoult.jpg" alt="{{carItem.brand}}">
   <div *ngIf="isCardLg">
 
-    <button class="btn-like" mat-button>Like</button>
+    <button  (click)="like()" class="btn-like" mat-button>Like</button>
     <button class="btn-details" mat-button>Details</button> 
   </div>
 </mat-card>
+
+<!-- (click)= like(carItem) -->
 
