--- a/src/app/shared-components/sm-card-car/sm-card-car.component.scss
+++ b/src/app/shared-components/sm-card-car/sm-card-car.component.scss
@@ -7,17 +7,18 @@
 }
 .mat-card-header {
   justify-content: space-between;
-  margin-left: -16px;
+  margin-left: -20px;
+
 }
-.mat-icon {
-  color: red;
-  display: none;
-}
+// .mat-icon {
+//   color: red;
+//   margin-top: -12px;
+// }
 
 .mat-card-image {
 	width: calc(100% + 32px);
 	margin: 0 -16px 16px -16px;
-	max-height: 100px;
+	max-height: 100px; 
 }
 section {
   display: table;
@@ -58,19 +59,21 @@ section {
   color: purple;
 }
 .size-sm{
-  width: 80px;
+  width: 105px;
   margin-bottom: 5px;
 }
 .size-lg{
-  width: 170px;
+  width: 200px;
 }
 .title-sm{
-  font-size: 12px;
-  margin-bottom: 5px !important;
+  font-size: 11px;
+  margin-bottom: 0px !important;
+  margin-top: -15px;
 }
 .subtitle-sm{
-  font-size: 12px;
+  font-size: 10px;
   margin-bottom: 5px;
+  margin-top: -5px;
 }
 .title-lg{
   font-size: 16px;
@@ -78,4 +81,22 @@ section {
 }
 .subtitle-lg{
   font-size: 14px;
+}
+.icon-sm{
+  color: red;
+  margin-top: -12px;
+}
+.icon-lg{
+  color: red;
+  margin-top: 0px;
+}
+.img-sm{
+width: calc(100% + 32px);
+	margin: 0 -16px 16px -16px;
+	max-height: 60px; 
+}
+.img-lg{
+  max-width: calc(100% + 32px);
+	margin: 0 -16px 16px -16px;
+	max-height: 100px; 
 }
