WIP: make category selected

--- a/src/app/dealers/dealers/dealers.component.html
+++ b/src/app/dealers/dealers/dealers.component.html
@@ -1,9 +1,9 @@
 <div class="dealers__conatainer">
 
 <app-table></app-table>
-  <!-- <section>
+  <section>
     <div class="example-button-row">
       <button mat-raised-button color="primary">Add dealers</button>
     </div>
-  </section> -->
+  </section>
 </div>
