--- a/src/app/cars/by-category-cars/by-category-cars.component.html
+++ b/src/app/cars/by-category-cars/by-category-cars.component.html
@@ -3,7 +3,7 @@
     <mat-tab-group (selectedTabChange)="tabChange($event)">
       <mat-tab  [label]="category | titlecase" *ngFor="let category of carsCategories">
         <mat-selection-list #cars [multiple]="false">
-          <mat-list-option  *ngFor="let car of takeCarsByCategory(category)" (click)="selectCar(car)">
+          <mat-list-option  *ngFor="let car of takeCarsByCategory(category); let i = index" [selected]="car&&i==0" (click)="selectCar(car)">
             <span class="model"><b>{{car.model}}</b></span>
             <span class="brand">{{car.brand}}</span>
           </mat-list-option>
