--- a/src/app/cars/by-category-cars/by-category-cars.component.scss
+++ b/src/app/cars/by-category-cars/by-category-cars.component.scss
@@ -5,9 +5,11 @@
 
 .mat-tab-group{
   width: 1250px;
+  height: 100vh !important;
 }
 .mat-selection-list{
   width: 300px; 
+  height: 100vh;
 }
 .category__conatainer{
   width: 100vw;
