--- a/src/app/dealers/table/table.component.scss
+++ b/src/app/dealers/table/table.component.scss
@@ -1,4 +1,3 @@
-/* Structure */
 table {
   width: 100%;
 }
@@ -6,4 +5,8 @@ table {
 .mat-form-field {
   font-size: 14px;
   width: 100%;
+}
+
+td, th {
+  width: 25%;
 }
