WIP: make view table

--- a/src/app/dealers/dealers/dealers.component.scss
+++ b/src/app/dealers/dealers/dealers.component.scss
@@ -1,8 +1,10 @@
 .dealers__conatainer{
-  width: 100vw;
+  width: 1222px;
   height: 100vh;
   display: flex;
   flex-direction: row;
+justify-content: center;
+
 }
 
 
