--- a/src/app/dealers/table/table.component.scss
+++ b/src/app/dealers/table/table.component.scss
@@ -12,3 +12,16 @@ td, th {
 .mat-table{
   width: 1150px;
 }
+
+// th {
+//   border: 1px solid black;
+// }
+
+// th {
+//   border: 1px solid black;
+// }
+
+table {
+  width: 100%;
+}
+
