--- a/src/app/menu-item/menu-item.component.html
+++ b/src/app/menu-item/menu-item.component.html
@@ -7,5 +7,5 @@
     </a>
   </div>
 
-  <div [ngClass]="visibility"></div>
+  <div [ngClass]="{'line-visible': visibility, 'line-unvisible': !visibility}"></div>
 </div>
