--- a/src/app/dealers/dealers/dealers.component.scss
+++ b/src/app/dealers/dealers/dealers.component.scss
@@ -1,6 +1,6 @@
 .dealers__conatainer{
   width: 1222px;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: row;
 justify-content: center;
@@ -9,13 +9,5 @@ justify-content: center;
 
 
 
-.example-button-row {
-  display: table-cell;
-  width: 490px;
-}
-
-.example-button-row .mat-button-base {
-  margin: 8px 8px 8px 0;
-}
 
 
