--- a/src/app/dealers/table/table.component.html
+++ b/src/app/dealers/table/table.component.html
@@ -1,73 +1,55 @@
 <div class="container__input">
   <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)"  placeholder="Ex. ium" #input>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
   </mat-form-field>
   <section>
     <div class="example-button-row">
-      <button mat-raised-button color="primary">Add dealers</button>
+      <button mat-raised-button color="primary" (click)="openPopUp()">Add dealers</button>
     </div>
   </section>
 </div>
 
 <div class="mat-elevation-z8">
-
-
-  <!--  -->
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-  
-    <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
-  
-     <!-- Position Column -->
-     <!-- <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-    </ng-container> -->
-  
     <ng-container matColumnDef="amountOfCars">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> AmountOfCars </th>
       <td mat-cell *matCellDef="let element"> {{element.amountOfCars}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="headquarters">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Headquarters </th>
       <td mat-cell *matCellDef="let element"> {{element.headquarters}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="country">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
       <td mat-cell *matCellDef="let element"> {{element.country}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="foundedIn">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Founded In </th>
       <td mat-cell *matCellDef="let element"> {{element.foundedIn}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="edit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>  </th>
-      <td mat-cell *matCellDef="let element"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+      <td mat-cell *matCellDef="let element">
+        <button (click)="openRow(element)" mat-icon-button>
+          <mat-icon aria-hidden="false" aria-label="Example home icon">edit</mat-icon>
+        </button>
+
+        <button (click)="delete(element)" mat-icon-button>
+          <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
+        </button>
       </td>
     </ng-container>
-  
-    <ng-container matColumnDef="delet">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>  </th>
-      <td mat-cell *matCellDef="let element"><mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-      </td>
-    </ng-container>
-  
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
-<app-form></app-form>
