--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -5,8 +5,8 @@
  
   <section>
     <div class="example-button-row">
-      <button mat-raised-button color="accent">Add car</button>
-      <button mat-raised-button color="primary">Add dealers</button>
+      <button mat-raised-button color="accent" >Add car</button>
+      <button mat-raised-button color="primary" (click)="openPopUp()">Add dealers</button>
     </div>
   </section>
 
