--- a/src/app/shared-components/form/form.component.scss
+++ b/src/app/shared-components/form/form.component.scss
@@ -3,11 +3,15 @@
   display: flex;
  flex-direction: column;
 }
-input.ng-invalid.ng-touched {
-  border: 1px solid red; 
+input{
+  margin-bottom: 15px;
 }
-
-
+input.ng-invalid.ng-touched {
+  border:  red ;
+}
+input.ng-valid{
+  border:  green ;
+}
 // .add-dealer-form {
 //   min-width: 335px;
 //   display: flex;
